[package]
name = "website_example"
version = "0.1.0"
edition = "2021"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5-sys = { version = "0.8.1", features = ["static"] }
hdf5 = "0.8.1"
ndarray = "0.15.6"